Make nested for loops work. This solution works, but probably isn't the best. We should have a look at it again after 4.2 is released.

BUG: 178186

svn path=/trunk/KDE/kdeedu/kturtle/; revision=899390